rust/tests/snapshots/help/catalog__credential-schema.snap
---
source: tests/cli/snapshots.rs
---
Print the credential fields required to create an app of this type

Usage: vendo catalog credential-schema [OPTIONS] <appType>

Arguments:
  <appType>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help

Examples:
  $ vendo catalog credential-schema onesignal
  $ vendo catalog credential-schema bigquery --json
