rust/tests/snapshots/help/catalog__get.snap
---
source: tests/cli/snapshots.rs
---
Get details for a specific platform

Usage: vendo catalog get [OPTIONS] <appType>

Arguments:
  <appType>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help

Examples:
  $ vendo catalog get shopify
  $ vendo catalog get bigquery --json
