rust/tests/snapshots/help/catalog__list.snap
---
source: tests/cli/snapshots.rs
---
List the platforms ready to connect

Usage: vendo catalog list [OPTIONS]

Options:
      --category <category>  Filter by category
      --role <role>          Filter by role (source, destination)
      --all                  List every platform, including the ones on request
      --json                 Output raw JSON
      --output <field>       Print a single field per row (e.g. appType)
  -h, --help                 Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo catalog list
  $ vendo catalog list --role source
  $ vendo catalog list --output appType
